# gpx_simplifier

./: Cargo.toml  LICENSE  README.md  run.sh
gapix/: Cargo.toml
gapix/src/: args.rs  excel.rs  formatting.rs  join.rs  main.rs  model.rs
gapix_core/: Cargo.toml
gapix_core/src/: byte_counter.rs  excel.rs  formatting.rs  gpx_reader.rs  gpx_writer.rs  lib.rs  model.rs  model2.rs  model_impls.rs  simplification.rs  stage.rs
gapix_core/src/read/: attributes.rs  bounds.rs  copyright.rs  declaration.rs  email.rs  extensions.rs  gpx.rs  link.rs  metadata.rs  mod.rs  person.rs  route.rs  track.rs  track_segment.rs  trackpoint_extensions.rs  waypoint.rs
src/: args.rs  excel.rs  formatting.rs  gpx_reader.rs  header.txt  main.rs  model.rs  section.rs  simplification.rs  stage.rs  temp.rs
