[package]
name = "gpx_simplifier"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive", "cargo"] }
geo = "0.28.0"
quick-xml = { version = "0.36.0", features = ["serialize"] }
rayon = "1.10.0"
rust_xlsxwriter = "0.75.0"
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.36", features = ["serde", "formatting", "parsing", "local-offset"] }
