[package]
name = "gapix"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive", "cargo"] }
env_logger = { workspace = true }
gapix_core = { path = "../gapix_core" }
log = { workspace = true }
logging_timer = { workspace = true }
serde = { version = "1.0.204", features = ["derive"] }
